# ECST

./: CMakeLists.txt
src/: lexer.cpp  lexer.h  main.cpp
